--- a/ToDoFor/index.html
+++ b/ToDoFor/index.html
@@ -15,24 +15,10 @@
         <input id="new" type="text" placeholder="Что же делать...?">
         <div id="add" class="todo__add">+</div>
         </div>
+        <div class="todo__tasks-count"></div>
+        <span>Всего покупок:</span>
+        <strong id ="count">0</strong>
         <div id="tasks" class="todo__list">
-            <div class="todo__task todo__task_complete">
-                <label class="todo__checkbox">
-                  <input type="checkbox">
-                  <div></div>
-                </label>
-                <div class="todo__task-text">Сухарики три корочки с семгой и сыром</div>
-                <div class="todo__task-del">-</div>
-            </div>
-            <div class="todo__task">
-                <label class="todo__checkbox">
-                  <input type="checkbox">
-                  <div></div>
-                </label>
-                <div class="todo__task-text">Киндер буэно</div>
-                <div class="todo__task-del">-</div>
-            </div>
-        </div>
     </div>
   </div>
 <script src="script.js"></script>
