--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <p>Hello World!</p>
-<script src="js/script.js"></script>
-</body>
+<html lang="ru">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<title>JavaScript</title>
+		<link rel="stylesheet" href="style.css">
+	</head>
+	<body>
+		<div class="box" id="box"></div>
+		<button>1</button>
+		<button>2</button>
+		<button>3</button>
+		<button>4</button>
+		<button>5</button>
+
+		<div class="circle"></div>
+		<div class="circle"></div>
+		<div class="circle"></div>
+
+		<div class="wrapper">
+			<div class="heart"></div>
+			<div class="heart"></div>
+            <div class="heart"></div>
+            
+		</div>
+
+		<script src="js/script.js"></script>
+	</body>
 </html>
