--- a/index.html
+++ b/index.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>Document</title>
-    <link rel="stylesheet" href="">
-</head>
-<body>
-  
-	<p>Hello world!</p>
-    <p>Second message</p>
-    
-    <script src="js/script.js"></script>
-</body>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   	<title>Java Script</title>
+   	<link rel="stylesheet" href="style.css">
+  </head>
+  <style>
+    body {
+      display: flex;
+      height: 100vh;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .time {
+      font-size: 24px;
+    }
+  </style>
+  <body>
+    <div class="time"></div>
+  <input id="input" type="text">
+<div>
+  <button id="start">Start</button>
+  <button id="stop">Stop</button>
+  <button id="reset">Reset</button>
+</div>
+
+	<script src="js/script.js"></script>
+  </body>
 </html>
