--- a/React/first-project/public/index.html
+++ b/React/first-project/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.3/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"/>
-    <title>Пуся Инкорпорейшн</title>
+    <title>Список сотрудников</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
